--- a/Home.css
+++ b/Home.css
@@ -1619,7 +1619,7 @@
   }
 
   .u-section-12 .u-layout-cell-1 {
-    min-height: 444px;
+    min-height: NaNpx;
   }
 
   .u-section-12 .u-image-1 {
@@ -1651,10 +1651,6 @@
     margin-bottom: 1px;
     width: 340px;
     margin-left: calc(((100% - 340px) / 2));
-  }
-
-  .u-section-12 .u-layout-cell-1 {
-    min-height: 326px;
   }
 
   .u-section-12 .u-layout-cell-2 {
