--- a/nicepage.css
+++ b/nicepage.css
@@ -1089,7 +1089,8 @@ ol {
 .u-text a,
 .u-post-content a,
 .u-tab-item a,
-.u-nav-item a {
+.u-nav-item a,
+.u-product-control.u-text a {
   font-size: inherit;
   font-family: inherit;
   line-height: inherit;
@@ -21218,6 +21219,15 @@ a.pswp__share--download:hover {
 .u-tabs.u-tab-links-align-right .u-tab-list {
   justify-content: flex-end;
 }
+.u-tabs.u-tab-vertical .u-tab-list {
+  flex-direction: column;
+}
+.u-tabs.u-tab-vertical .u-tab-list .u-tab-item:not(:last-child) {
+  margin-bottom: 0;
+}
+.u-tabs.u-tab-vertical .u-tab-list .u-tab-link {
+  text-align: left;
+}
 .u-tabs.u-tab-links-align-justify .u-tab-list {
   text-align: center;
 }
@@ -21525,9 +21535,6 @@ a.pswp__share--download:hover {
 .u-product {
   display: flex;
 }
-.u-gallery.u-product-control .u-back-image {
-  object-fit: contain;
-}
 .u-product-price {
   display: table;
 }
@@ -21547,6 +21554,35 @@ a.pswp__share--download:hover {
 }
 .u-price-wrapper .u-hide-price + div {
   margin-left: 0;
+}
+.u-product-second-image {
+  display: none;
+}
+.u-product-second-image-wrapper {
+  position: relative;
+}
+.u-product-second-image-wrapper .u-image {
+  transition: all 0.7s ease;
+}
+.u-product-second-image-wrapper .u-image + .u-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.7s ease;
+}
+.u-product-second-image-wrapper > img + img,
+.u-product-second-image-wrapper > div + div {
+  opacity: 0;
+}
+.u-product-second-image-wrapper:hover > img + img,
+.u-product-second-image-wrapper:hover > div + div {
+  opacity: 1;
+}
+.u-product-second-image-wrapper:hover > img:first-child:not(:only-child),
+.u-product-second-image-wrapper:hover > div:first-child:not(:only-child) {
+  opacity: 0;
 }
 .u-product-quantity {
   display: table;
@@ -21682,12 +21718,28 @@ a.pswp__share--download:hover {
     grid-template-columns: 1fr;
   }
 }
-.u-payment-services {
+.u-payment-services-inner {
+  width: 100%;
+}
+.u-tabs.u-tab-payment {
+  flex-grow: 1;
+}
+.u-tabs.u-tab-payment .u-tab-link {
   display: flex;
   align-items: center;
 }
-.u-payment-services-inner {
-  width: 100%;
+.u-tabs.u-tab-payment .u-tab-link input {
+  margin-left: 0;
+  margin-right: 1em;
+}
+.u-tabs.u-tab-payment .u-tab-link svg {
+  height: 24px;
+  width: 24px;
+  margin-left: auto;
+  margin-right: 0;
+}
+.u-tabs.u-tab-payment .u-tab-item:first-child .u-tab-link {
+  border-bottom: none;
 }
 .u-dialog {
   display: flex;
@@ -23741,9 +23793,10 @@ section.u-dialog-block:not(.u-dialog-open) {
 .u-carousel-right .u-carousel-inner .u-active.u-carousel-item-left {
   transform: translate3d(100%, 0, 0);
 }
-.u-form {
-  --checkbox-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
-  --radio-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+.u-form,
+.u-tab-payment {
+  --checkbox-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23478ac9' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+  --radio-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23478ac9'/%3e%3c/svg%3e");
 }
 .u-field-input {
   border: 0;
